# cpp_MilTech

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.965664FDB812B33A.idx  main.cpp.988AF851CE768A0E.idx
.devcontainer/: apt-packages.in
.devcontainer/ros2-jazzy/: devcontainer.json
.github/workflows/: build.yml  homework_14.yml
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_06/: CMakeLists.txt
homework_06/data/: unknown_ammo.txt
homework_06/include/: ballistics.hpp
homework_06/src/: ballistics.cpp  main.cpp
homework_06/tests/: ballistics_tests.cpp
homework_07/: CMakeLists.txt  README.md
homework_07/data/: config.json  targets.json
homework_07/include/: AnalyticalSolver.h  Factory.h  FileConfigLoader.h  IBallisticSolver.h  IConfigLoader.h  ITargetProvider.h  JsonTargetProvider.h  MissionProcessor.h  Types.h
homework_07/src/: AnalyticalSolver.cpp  Factory.cpp  FileConfigLoader.cpp  JsonTargetProvider.cpp  MissionProcessor.cpp  main.cpp
homework_08/: CMakeLists.txt  README.md
homework_08/include/: MissionProcessor.h  Types.h
homework_08/include/config/: ComponentFactory.h  FileConfigLoader.h
homework_08/include/drone/: DroneStateMachine.h
homework_08/include/providers/: JsonTargetProvider.h
homework_08/src/: MissionProcessor.cpp  main.cpp
homework_08/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp
homework_08/src/drone/: DroneStateMachine.cpp
homework_08/src/providers/: JsonTargetProvider.cpp
homework_09/: CMakeLists.txt  README.md
homework_09/data/: ammo.json
homework_09/include/: MissionProcessor.h  Types.h
homework_09/include/config/: ComponentFactory.h
homework_09/include/drone/: DroneStateMachine.h
homework_09/include/interfaces/: IBallisticSolver.h  IConfigLoader.h  ITargetProvider.h
homework_09/include/providers/: JsonTargetProvider.h
homework_09/include/solvers/: AnalyticalSolver.h
homework_09/src/: MissionProcessor.cpp  main.cpp
homework_09/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp
homework_09/src/drone/: DroneStateMachine.cpp
homework_09/src/providers/: JsonTargetProvider.cpp
homework_10/: CMakeLists.txt  README.md
homework_10/data/: config.json
homework_10/include/: MissionProcessor.h  ThreadSafeQueue.h  Types.h
homework_10/include/config/: ComponentFactory.h  FileConfigLoader.h
homework_10/include/drone/: DronePhysics.h  DroneStateMachine.h
homework_10/include/providers/: ThreadSafeTargetProvider.h
homework_10/include/solvers/: TableSolver.h
homework_10/src/: MissionProcessor.cpp  main.cpp
homework_10/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp
homework_10/src/drone/: DronePhysics.cpp
homework_10/src/providers/: ThreadSafeTargetProvider.cpp
homework_10/src/solvers/: AnalyticalSolver.cpp  TableSolver.cpp
homework_11/: CMakeLists.txt  README.md
homework_11/include/: DroneController.h  LinkState.h  MissionProcessor.h  Types.h  drone_link.h
homework_11/include/interfaces/: IBallisticSolver.h
homework_11/include/io/: GpioSignals.h  UartLink.h
homework_11/include/solvers/: AnalyticalSolver.h
homework_11/src/: DroneController.cpp  MissionProcessor.cpp  main.cpp
homework_11/src/io/: GpioSignals.cpp  UartLink.cpp
homework_11/src/solvers/: AnalyticalSolver.cpp
homework_12/: README.md
homework_12/edge/: docker-compose.yml
homework_12/edge/c2/: Dockerfile
homework_12/edge/c2/src/: c2_controller.cpp  c2_controller.hpp  fc_link.cpp  fc_link.hpp  main.cpp  udp_socket.hpp
homework_13/robot_ws/src/antidrone_turret/: CMakeLists.txt
homework_13/robot_ws/src/antidrone_turret/include/antidrone_turret/: actuator_model.hpp  target_sequence.hpp  target_track_loader.hpp  target_track_simulation.hpp  turret_logic.hpp
homework_13/robot_ws/src/antidrone_turret/launch/: system.launch.py
homework_13/robot_ws/src/antidrone_turret/msg/: GimbalCommand.msg  ServoCommand.msg  TurretStatus.msg
homework_13/robot_ws/src/antidrone_turret/src/: actuator_node.cpp  gimbal_driver_node.cpp  target_track_publisher_node.cpp  turret_controller_node.cpp  yaw_servo_driver_node.cpp
homework_13/robot_ws/src/antidrone_turret/test/: provided_logic_test.cpp  turret_logic_test.cpp
homework_14/: .gitignore
homework_14/bags/branching_trench/: branching_trench_0.mcap  metadata.yaml
homework_14/bags/dead_end_bunker/: dead_end_bunker_0.mcap  metadata.yaml
homework_14/bags/small_rooms/: metadata.yaml  small_rooms_0.mcap
homework_14/bags/training_corridor/: metadata.yaml  training_corridor_0.mcap
homework_14/robot_ws/src/mission_control/: CMakeLists.txt  package.xml
homework_14/robot_ws/src/mission_control/src/: mission_explorer.cpp  payload_action.cpp
homework_14/robot_ws/src/underground_world/: CMakeLists.txt  package.xml
homework_14/robot_ws/src/underground_world/config/: branching_trench.yaml  dead_end_bunker.yaml  small_rooms.yaml  training_corridor.yaml
homework_14/robot_ws/src/underground_world/include/underground_world/: scenario.hpp  scenario_loader.hpp  world_model.hpp
homework_14/robot_ws/src/underground_world/launch/: system.launch.py
homework_14/robot_ws/src/underground_world/msg/: CellObservation.msg  EnemyDown.msg  LocalScan.msg  MoveCommand.msg  RobotMetrics.msg  RobotResult.msg  StudentStatus.msg
homework_14/robot_ws/src/underground_world/src/: scenario_loader.cpp  underground_world_node.cpp  world_model.cpp
homework_14/robot_ws/src/underground_world/srv/: PayloadTrigger.srv
homework_14/robot_ws/src/underground_world/test/: provided_world_contract_test.cpp
